# word_learn

./: .env.example  .gitignore  Dockerfile  HANDOFF.md  USE_CASES.md  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_session_word_results.py  003_add_consecutive_failures.py  004_add_practice_streaks.py
batches/: ROADMAP.md  batch_001_essential.txt  batch_002_daily_nouns.txt  batch_003_numbers_time.txt  batch_004_common_verbs.txt  batch_005_supermarket.txt  batch_006_healthcare_body.txt  batch_007_doctor_pharmacy.txt  batch_008_home_household.txt  batch_009_transport_directions.txt  batch_010_shopping_services.txt  batch_011_restaurant_cafe.txt  batch_012_weather.txt  batch_013_social_smalltalk.txt  batch_014_emotions_feelings.txt  batch_015_work_office.txt  batch_016_phone_communication.txt  batch_017_government_gemeente.txt  batch_018_banking_finance.txt  batch_019_housing_renting.txt  batch_020_dutch_expressions.txt  batch_021_separable_verbs_1.txt  batch_022_separable_verbs_2.txt  batch_023_reflexive_verbs.txt  batch_024_adjectives.txt
scripts/: add_batch.py  assess_vocabulary.py  decommission_php.sh  export_mysql.sh  import_to_railway.py  migrate_data.py  run_reminders.py
src/word_learn/: __init__.py  bot.py  config.py  database.py
tests/: __init__.py  conftest.py
tests/e2e/: test_bot_flows.py
tests/integration/: test_repositories.py
tests/unit/: test_insights_generator.py  test_models.py  test_session_messages.py  test_spaced_repetition.py  test_stage_labels.py  test_streaks.py  (+1 more)
(+26 files in other folders)
