[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "word_learn"
version = "1.0.0"
description = "Telegram bot for learning words with spaced repetition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
